# code

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: daily_tests.yml  deploy_tests_on_pull_request.yml  docs.yml  testing.yml  version_check.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: dandi_compute_code.aind_ephys_pipeline.rst  dandi_compute_code.dandiset.rst  dandi_compute_code.queue.rst  dandi_compute_code.rst  index.rst
logs/name-example_run-1/: slurm_submit.sh
old/old_configs/run-4/: custom.config
old/old_dashboard/: index.html
pipeline-aind+ephys/: dag.html  default.config  get_blob_id.py  run.sh  submit.sh  submit_2.sh
src/dandi_compute_code/: __init__.py  _cli.py  _hidden_top_level_imports.py  _testing.py  _utils.py  _write_submitted_marker.py
src/dandi_compute_code/_aind_ephys_pipeline/: _globals.py  _handle_template.py  default.config  old_eot_submit.sh  submission_template.txt
src/dandi_compute_code/_cli/: __init__.py  _clean_work_directory.py  _configure_logging.py  _dandicompute_group.py  _oop_failsafe.py  _styled_echo.py
src/dandi_compute_code/_command_line_interface/: _main.py
src/dandi_compute_code/aind_ephys_pipeline/: README.md  __init__.py  _globals.py  _handle_template.py  _prepare_job.py  _submit_job.py  _update_mirror.py  default_parameters.json  get_blob_id.py  mit_engaging.config  mit_engaging_no_motion.config  no_motion_parameters.json  submission_template.txt
src/dandi_compute_code/dandiset/: __init__.py  _create_dandi_api_client.py  _delete.py  _delete_dandiset_version.py  _globals.py  _load_assets_jsonld_metadata.py  _load_content_id_to_unique_dandiset_path.py  _load_content_id_to_usage_dandiset_path.py  _lookup_asset_size_bytes.py  _lookup_job_completion_time.py  _move_job_capsule.py  _normalize_asset_path.py  _parse_attempt_dir.py  _parse_content_id_from_submission_script.py  _scan.py  _scan_dandiset_directory.py  _scan_version_directories.py
src/dandi_compute_code/queue/: __init__.py  _aggregate_queue_statistics.py  _attempt_dir_candidates.py  _build_processing_order.py  _clean_unsubmitted_capsules.py  _count_dandiset_failures.py  _count_running_aind_ephys_pipeline_jobs.py  _dump_issues.py  _duration_string_to_seconds.py  _entry_identity.py  _extract_error_lines.py  _extract_nextflow_timeline_data.py  _find_pending_entries.py  _globals.py  _has_pending_jobs.py  _issues.py  _job_info.py  _list_capsule_log_directories.py  _load_queue_config.py  _order_content_ids_for_uniform_dandiset_sampling.py  _order_queue.py  _prepare_queue.py  _process_queue.py  _prune_last_submitted.py  _queue_state.py  _queue_utils.py  _read_state_entries.py  (+11 more)
tests/: test_cli_descriptions.py  test_config_registry.py  test_delete_dandiset.py  test_issues.py  test_prepare_job.py  test_process_queue.py  test_scan_dandiset.py  test_submit_job.py
(+124 files in other folders)
