[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"



[project]
name = "dandi-compute-code"
authors = [
  { name="Cody Baker", email="cody.c.baker.phd@gmail.com" },
]
description = "Contains essential code for performing computations on DANDI assets."
readme = "README.md"
license = {file = "LICENSE.txt"}
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "click",  # rich-click did not work well on Engaging
    "dandi",
]
dynamic = ["version"]

[project.scripts]
dandicompute = "dandi_compute_code._cli:_dandicompute_group"

[dependency-groups]
dev = ["ipython", "pre-commit"]
all = [
    {include-group = "dev"},
]



[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.toml
  |\.yml
  |\.txt
  |\.sh
  |\.git
  |\.ini
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
exclude = [
  "*/__init__.py"
]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "I"]
ignore = [
    "PTH123",
    "D203",
    "D212",
    "T201",
    "FIX002",
    "TD003",
    "TD002",
    "S101",
    "ICN001",
    "INP001",
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
relative-imports-order = "closest-to-furthest"
known-first-party = ["dandi_compute_code"]

[tool.ruff.lint.per-file-ignores]
"src/dandi_compute_code/_hidden_top_level_imports.py" = ["F401"]  # Must perform imports here even if not exposed
